# aoc2025-dwarf

./: .editorconfig  .gitignore  Cargo.toml  README.md  day0.dwasm  day11_graph.rs  day11_part2.rs
days/: bytearray.dwasm  day00.dwasm  day01.dwasm  day02.dwasm  day03.dwasm  day04.dwasm  day05.dwasm  day06.dwasm  day07.dwasm  day09.dwasm  day10.dwasm  day11.dwasm  math.dwasm  panic.dwasm  parse.dwasm  string.dwasm  tests.dwasm
days/inputs/: day00
src/: compile.rs  main.rs  parse.rs  tests.rs  write.rs
src/dwarf_program/: mod.rs  run.rs  write.rs
